# agenttrace

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.cfg  setup.py
examples/: eval.py  trace.py
frontend/: README.md  package-lock.json  package.json
frontend/client/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/client/src/: App.tsx  index.css  main.tsx
frontend/client/src/components/: CodeViewer.tsx  DataTable.tsx  JsonViewer.tsx  Layout.tsx  LoadingIndicator.tsx  OverviewChart.tsx  ToolUsagePanel.tsx  TraceOverviewChart.tsx  TraceVisualizer.tsx
frontend/client/src/pages/: Dashboard.tsx  Evaluations.tsx  Performance.tsx  Sessions.tsx  Traces.tsx
frontend/client/src/services/: api.ts
frontend/client/src/types/: index.ts  react-app-env.d.ts
frontend/client/src/utils/: theme.ts
frontend/server/: index.ts  package-lock.json  package.json  tsconfig.json
frontend/server/repositories/: evalRepository.ts  traceRepository.ts
frontend/server/routes/: dbRoutes.ts  evalRoutes.ts  traceRoutes.ts
frontend/server/services/: dbService.ts
src/agenttrace/: __init__.py  agenttrace.py  cli.py
src/tensorscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py
