[metadata]
name = tensorscope
version = attr: tensorscope.__version__
description = A tool for evaluating and tracing tensor operations
long_description = file: README.md
long_description_content_type = text/markdown
author = TensorStax
author_email = info@tensorstax.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://github.com/tensorstax/tensorscope

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
tensorscope = py.typed

[tool:pytest]
testpaths = tests
python_files = test_*.py 